--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,14 @@
-<footer class="footer text-center bg-dark mt-auto py-3">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
+
+<footer
+  class="footer text-center bg-dark mt-auto py-3"
+  style="font-family: 'Play', serif"
+>
   <div class="container">
     <span style="color: antiquewhite"
       >&copy; BookThing <span id="current-year"></span> - Developed by
