--- a/public/stylesheets/userProfile.css
+++ b/public/stylesheets/userProfile.css
@@ -3,6 +3,7 @@
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
+  /* User Profile Header */
   h1 {
     font-family: "Play", serif;
     color: #00757a;
@@ -12,14 +13,13 @@
     font-family: "Play", serif;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 1.65rem;
     color: #f04f25;
   }
 
   .books-read {
     display: inline;
     margin-right: 5px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     color: #00757a;
   }
 
@@ -29,9 +29,12 @@
   }
   /* Bookshelf */
   .book-card .card {
-    max-width: 50%;
+    max-width: 100%;
     max-height: fit-content;
-    padding: 0;
+    padding: 0; 
+  }
+  .book-card .card:hover {
+    background-color: #f04f25;
   }
   .book-card .card-body {
     display: flex;
@@ -40,11 +43,11 @@
 
   .book-card img {
     margin: 0;
-    width: 15rem;
-    height: 12rem;
-    /* max-height: 10rem; */
-    /* object-fit: cover; */
+    width: 100%;
+    height: 16rem;
+    object-fit: cover;
   }
+ 
   /* Book Reviews */
   .card-title a {
     color: #00757a;
@@ -67,6 +70,7 @@
       font-size: 1.2rem;
     }
   }
+
   @media only screen and (max-width: 576px) {
     .horizontal-user-card {
       max-width: 65%;
@@ -79,4 +83,13 @@
     .horizontal-user-card .card-body {
       text-align: center;
     }
+    .book-card .card {
+        max-width: 8rem;
+        
+      }
+      .book-card img {
+        width: 100%;
+        height: 12rem;
+        object-fit: cover;
+      }
   }
