--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,21 +1,38 @@
 body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
   }
-.box{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
- }
- 
- .box>*{
-    flex: 1 1 1;
- }
- 
- .img-thumbnail{
+
+h1 {
+    color: #323e41;
+    font-size: 2.2rem;
+    align-items: center;
+}  
+
+.img-thumbnail{
      border:0;
      height:18rem;
  }
- 
+
+ .card:hover {
+    border: 1px solid #00757a;
+ }
+
+ .book-cards h5  {
+    color: #00757a;
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-bottom: 0.75rem;
+    
+ }
+
+ .book-cards a {
+    text-decoration: none;
+ }
+
+ .book-cards h5:hover {
+    color: #00ab66;
+ }
+
  #btn-back-to-top {
      position: fixed;
      bottom: 20px;
@@ -27,3 +44,8 @@ body {
     display: none; 
  }
 
+ @media (max-width: 576px) {
+    h1 {
+      margin-bottom: 1rem;
+    }
+  }
