--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -17,8 +17,11 @@
 </button>
 
 <div class="container">
-  <div class="d-flex justify-content-between align-items-center mb-5">
-    <h1>Popular Books</h1>
+  <div
+    class="d-flex flex-column flex-sm-row justify-content-between align-items-center mb-5 custom-mb"
+  >
+    <h1 class="align-self-center mb-lg-0">Book Gallery</h1>
+
     <form class="d-flex" role="search">
       <input
         class="form-control me-2"
@@ -29,7 +32,7 @@
       />
     </form>
   </div>
-  <div class="box mb-3">
+  <div class="box mb-5">
     <div
       class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-4 mb-3"
     >
