routes restructured; db updated

--- a/views/users/change-password.ejs
+++ b/views/users/change-password.ejs
@@ -7,7 +7,7 @@
           <h1 class="card-title fs-2 mb-3">Change Password</h1>
 
           <form
-            action="/users/<%= foundUser._id %>/change-password?_method=PUT"
+            action="/users/<%= foundUser._id %>/changepassword?_method=PUT"
             method="POST"
             class="validated-form"
             novalidate
