atlas mongo & mongo session

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,7 +12,9 @@
   <div class="container">
     <span style="color: antiquewhite"
       >&copy; BookThing <span id="current-year"></span> - Developed by
-      <a href="#">calmNinja</a></span
+      <a href="https://github.com/calmNinja/bookThingApp-fullstack"
+        >calmNinja</a
+      ></span
     >
   </div>
 </footer>
