--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,7 +12,9 @@
   <div class="container">
     <span style="color: antiquewhite"
       >&copy; BookThing <span id="current-year"></span> - Developed by
-      <a href="https://github.com/calmNinja/bookThingApp-fullstack"
+      <a
+        href="https://github.com/calmNinja/bookThingApp-fullstack"
+        target="_blank"
         >calmNinja</a
       ></span
     >
